--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,141 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
+
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-color: hsl(217, 54%, 11%);
+  background-color: hsl(217, 54%, 11%);
+  font-family: "Outfit", sans-serif;
 }
 
 h1 {
-    color: hsl(0, 0%, 100%);
+  color: hsl(0, 0%, 100%);
+  font-weight: 600;
+  font-size: 1.2rem;
+  margin: 0rem 1.2rem 1rem;
 }
 
 hr {
-    color: hsl(215, 32%, 27%);
+  height: 1px;
+  width: 88%;
+  margin: 1rem 1rem 0.2rem;
+  border: none;
+  background-color: hsl(215, 32%, 27%);
 }
 
-.container {
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    background-color: hsl(216, 50%, 16%);
-    border-radius: 15px;
-    padding:30px 30px 30px;
-    width: 500px;
+p {
+  font-size: 1rem;
+}
+
+.currency-icon,
+.price,
+.clock-icon,
+.time,
+.creator,
+.creator-name,
+.creator-img {
+  display: inline;
 }
 
 .desc,
+.time,
+.creator {
+  color: hsl(215, 51%, 70%);
+  font-weight: 300;
+}
+
+.creator,
+.creator-name {
+  font-size: 0.9rem;
+  vertical-align: 17px;
+}
+
+.price,
 .time {
-    color: hsl(215, 51%, 70%);
+  vertical-align: 3px;
+  font-size: 0.9rem;
+}
+
+.container {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  background-color: hsl(216, 50%, 16%);
+  border-radius: 15px;
+  width: 315px;
+  height: 515px;
+}
+
+.creator-img {
+  width: 30px;
+  border-radius: 15px;
+  border: 1px solid white;
+  margin: 0.5rem 0.7rem 0.5rem 1.2rem;
+}
+
+.creator-name {
+  color: white;
+}
+
+.desc {
+  margin: 1rem 1.2rem;
 }
 
 .nft-img {
-    border-radius: 15px;
-    width: 27rem;
+  border-radius: 15px;
+  margin: 1.2rem;
+  width: 275px;
+  opacity: 1;
+  display: block;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+
+.currency-icon {
+  margin-left: 1.2rem;
 }
 
 .price {
-    color: hsl(178, 100%, 50%);
+  margin-right: 6rem;
+  font-weight: 400;
+  color: hsl(178, 100%, 50%);
+}
+
+.img-container {
+  position: relative;
+  width: 100%;
+}
+
+.view-container {
+  transition: 0.5s ease;
+  background-color: rgba(0, 255, 247, 0.5);
+  opacity: 0;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+  width: 275px;
+  height: 100%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  border-radius: 15px;
+}
+
+/* Hover effects */
+
+h1:hover,
+.creator-name:hover {
+  cursor: pointer;
+  color: hsl(178, 100%, 50%);
+}
+
+.img-container:hover .view-container {
+  cursor: pointer;
+  opacity: 1;
 }
